# airconnectapi

./: .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.junie/: guidelines.md
.junie/mcp/: mcp.json
app/: __init__.py  main.py
app/api/: __init__.py  api.py  public.py  system.py
app/core/: config.py  logging.py  rate_limit.py
app/models/: common.py  db.py
app/templates/: 404.html  about.html  airport.html  api.html  base.html  index.html  map.html  site.html
app/templates/partials/: footer.html  head.html  header.html
scripts/: get_all_flight_info.py  scrape_airport_routes.py
tests/: __init__.py  test_filters.py  test_main.py  test_pagination.py
